compile module && install with kernel

--- a/src/ch02/Makefile
+++ b/src/ch02/Makefile
@@ -7,9 +7,8 @@ obj-m := hello_world.o
 # Otherwise we were called directly from the command
 # line; invoke the kernel build system.
 else
-# may require `linux-headers-$(uname -r)` or `make headers_install`(https://www.kernel.org/doc/Documentation/kbuild/headers_install.txt)
 # KERNELDIR ?= /lib/modules/$(shell uname -r)/build
-KERNELDIR ?= ${HOME}/linux
+KERNELDIR ?= /linux
 PWD := $(shell pwd)
 default:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
